updated web  link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </ul>
 
       <div class="about">
-        <a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-mid-gray" href="www.kennywhyte.com">Created with ❤ by
+        <a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-mid-gray" href="https://www.kennywhyte.com/">Created with ❤ by
           Kenny</a>
         <!-- <button id="about">About</button> -->
 
