--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <ul class="tc mw7 center mt4 ">
         <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link" onclick="openCity(event, 'Staff', 'black')"
           href="#0">All Games</a>
-        <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link" onclick="openCity(event, 'Polygon', 'pink')"
-          href="#0">Polygon Picks</a>
+        <!-- <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link" onclick="openCity(event, 'Polygon', 'pink')"
+          href="#0">Polygon Picks</a> -->
         <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link top-links" onclick="openCity(event, 'Tokyo','gray')"
-          href="#0">Best for Causal Gamers</a>
+          href="#0">Causal Gamers</a>
         <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link top-links"
           onclick="openCity(event, 'London', 'red')" href="#0" href="#0">Switch</a>
         <a class="f6 link dim br3 ba bw1 ph3 pv2 mb2 dib white link top-links"
