--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>Video Game Of The Year</title>
+  <meta name="Video game of the year" content="Video game of the year app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
@@ -71,7 +71,7 @@
       </ul>
 
       <div class="about">
-        <a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-mid-gray" href="https://www.kennywhyte.com/">Created with ❤ by
+        <a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-mid-gray" href="https://www.kennywhyte.com/">Created with 🍕 by
           Kenny</a>
         <!-- <button id="about">About</button> -->
 
